# weekdays

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
src/tests/: lib.rs
