[package]
name          = "weekdays"
version       = "0.0.1"
description   = "Days of the week bit-mapped in a single byte"
categories    = ["data-structures", "database", "date-and-time", "encoding"]
keywords      = ["date", "integer", "library", "utility", "weekday"]
edition       = "2021"
rust-version  = "1.81.0"
license       = "MIT"
authors       = ["Dan Williams <dan@dotfive.co.uk>"]
repository    = "https://github.com/danwilliams/weekdays"
documentation = "https://docs.rs/weekdays"
readme        = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip     = true   # Automatically strip symbols from the binary
opt-level = 3      # Maximum optimisation (this is the cargo default)
lto       = "thin" # Enable link-time optimisation (fast)

[dependencies]
